# advent_of_code_2022

./: Cargo.toml
inputs/: day_1_part_1.txt
macro_lib/: Cargo.toml
macro_lib/src/: lib.rs
macro_lib/tests/: test_grid.rs
src/days/: day_1.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_2.rs  day_20.rs  day_21.rs  day_22.rs  day_23.rs  day_24.rs  day_25.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  day_7.rs  day_8.rs  day_9.rs  error.rs  mod.rs  parse.rs  points.rs  y2020_day_1.rs  y2020_day_25.rs
