[package]
name = "advent_of_code_2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2"
anyhow = "1.0"
thiserror = "1.0"
nom = "7.1"
seq-macro = "0.3"
paste = "1.0"
rand = "0.8"
macro_lib = { path = "macro_lib" }

[workspace]
members = ["macro_lib"]